--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "gmr" # todo
+name = "037" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "gmr.kozelvpn.filegear-sg.me"
+pattern = "037.kozelvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.gmr.zellyvpn.filegear-sg.me"
+pattern = "support.duolingo.com.037.zellyvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.gmr.zellyvpn.filegear-sg.me"
+pattern = "support.duolingo.com.037.zellyvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.gmr.zellyvpn.filegear-sg.me"
+pattern = "support.duolingo.com.037.zellyvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.duolingo.com.gmr.zellyvpn.filegear-sg.me"
+pattern = "support.duolingo.com.037.zellyvpn.filegear-sg.me"
 custom_domain = true
 
 [vars]
