--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,7 +5,7 @@ name = "poe.garena.com" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "poe.garena.com.kozelvpn.filegear-sg.me"
+pattern = "poe.garena.com.zellyvpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
 pattern = "poe.garena.com.zellyvpn.filegear-sg.me"
