--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,13 +5,13 @@ name = "dimskie" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = “dimskie.dimskie.filegear-sg.me”
+pattern = 'dimskie.dimskie.filegear-sg.me'
 custom_domain = true
 [[routes]]
-pattern = “graph.instagram.com.dimskie.filegear-sg.me”
+pattern = 'graph.instagram.com.dimskie.filegear-sg.me'
 custom_domain = true
 [[routes]]
-pattern = “investors.spotify.com.dimskie.filegear-sg.me”
+pattern = 'investors.spotify.com.dimskie.filegear-sg.me'
 custom_domain = true
 
 [vars]
