--- a/wrangler.toml
+++ b/wrangler.toml
@@ -8,16 +8,16 @@ compatibility_date = "2023-05-26"
 pattern = "amazont.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "trunkstable.instagram.com.amazont.sant.my.id"
+pattern = "ava.game.naver.com.amazont.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "graph.instagram.com.amazont.sant.my.id"
+pattern = "ava.game.naver.com.amazont.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "z-p15.www.instagram.com.amazont.sant.my.id"
+pattern = "ava.game.naver.com.amazont.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "api.instagram.com.amazont.sant.my.id"
+pattern = "ava.game.naver.com.amazont.sant.my.id"
 custom_domain = true
 
 [vars]
