--- a/wrangler.toml
+++ b/wrangler.toml
@@ -17,7 +17,7 @@ custom_domain = true
 pattern = "ava.game.naver.com.amazont.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.amazont.sant.my.id"
+pattern = "Help.viu.com.amazont.sant.my.id"
 custom_domain = true
 
 [vars]
