--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "amazont" # todo
+name = "sg-loyang" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "amazont.sant.my.id"
+pattern = "sg-loyang.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.amazont.sant.my.id"
+pattern = "help.viu.com.sg-loyang.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.amazont.sant.my.id"
+pattern = "help.viu.com.sg-loyang.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.amazont.sant.my.id"
+pattern = "help.viu.com.sg-loyang.sant.my.id"
 custom_domain = true
 [[routes]]
-pattern = "help.viu.com.amazont.sant.my.id"
+pattern = "help.viu.com.sg-loyang.sant.my.id"
 custom_domain = true
 
 [vars]
