--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,9 +1,30 @@
-name = "cf-worker-ws-dev" # todo
+name = "ddan" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
+[[routes]]
+pattern = "ddan.wonghd.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "df.game.naver.co.id.ddan.wonghd.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "discord.gg.ddan.wonghd.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "maps.googleapis.com.ddan.wonghd.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.ddan.wonghd.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "upp.facebookinc.com.ddan.wonghd.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "sb.scorecardresearch.com.ddan.wonghd.filegear-sg.me"
+custom_domain = true
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
@@ -12,4 +33,4 @@ compatibility_date = "2023-05-26"
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "1b6c1745-992e-4aac-8685-266c090e50ea,89b64978-6244-4bf3-bf64-67ade4ce5c8f,d342d11e-d424-4583-b36e-524ab1f0afa4"
+UUID = "24081f6c-67d5-48f9-af73-2003bb38656e"
