--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,21 +1,25 @@
-name = "sgamaxon" # todo
+name = "idnew" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "sg1.gyzstore.filegear-sg.me"
+pattern = "id1.gyzstore.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.sg1.gyzstore.filegear-sg.me"
+pattern = "ava.game.naver.com.id1.gyzstore.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.sg1.gyzstore.filegear-sg.me"
+pattern = "df.game.naver.com.id1.gyzstore.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "go2.webtoons.com.sg1.gyzstore.filegear-sg.me"
+pattern = "go2.webtoons.com.id1.gyzstore.filegear-sg.me"
 custom_domain = true
+[[routes]]
+pattern = "pub.pmang.com.id1.gyzstore.filegear-sg.me"
+custom_domain = true
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
