--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,24 +1,48 @@
-name = "diptyque" # todo
+name = "serversg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "diptyque.fadzvpnid.filegear-sg.me"
+pattern = "support.zoom.us.serversg.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.diptyque.fadzvpnid.filegear-sg.me"
+pattern = "beta.zoom.us.serversg.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "naver.com.diptyque.fadzvpnid.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.serversg.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "line.naver.jp.diptyque.fadzvpnid.filegear-sg.me"
+pattern = "104.18.17.230.serversg.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "m.spolive.game.pmang.com.diptyque.fadzvpnid.filegear-sg.me"
+pattern = "support.duolingo.com.serversg.fadzvpnid.filegear-sg.me"
 custom_domain = true
+pattern = "quiz.int.vidio.com.serversg.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.staging.vidio.com.serversg.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.vidio.com.serversg.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "Ava.game.naver.com.serversg.fadzvpnid.filegear-sg.me"
+custom_domain = true
+pattern = "Df.game.naver.com.serversg.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "investor.fb.com.serversg.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cdn.appsflyer.com.serversg.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "www.pubgmobile.com.serversg.fadzvpnid.filegear-sg.me"
+custom_domain = true
+
+
 
 [vars]
 # UUID = "d342d11e-d424-4583-b36e-524ab1f0afa4"
