--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,65 @@
-name = "serversg" # todo
+name = "sgcontabo" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "serversg.fadzvpnid.filegear-sg.me"
+pattern = "sgcontabo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.serversg.fadzvpnid.filegear-sg.me"
+pattern = "Ava.game.naver.com.sgcontabo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "Ava.game.naver.com.serversg.fadzvpnid.filegear-sg.me"
+pattern = "Df.game.naver.com.sgcontabo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.serversg.fadzvpnid.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.sgcontabo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "investor.fb.com.serversg.fadzvpnid.filegear-sg.me"
+pattern = "englishtest-stage-7.duolingo.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "api.zoom.us.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "Account.pmang.game.naver.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "quiz.int.vidio.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "support.duolingo.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "investor.fb.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "static.cdninstagram.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "support.zoom.us.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "www.pubgmobile.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "investors.spotify.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "www.sushiroll.co.id.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "games.axis.co.id.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cdn.appsflyer.com.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "cftxvid.vod.nimo.tv.sgcontabo.fadzvpnid.filegear-sg.me"
+custom_domain = true
+[[routes]]
+pattern = "connect.garenanow.com.sgcontabo.fadzvpnid.filegear-sg.me"
 custom_domain = true
 
 [vars]
