--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,32 +1,32 @@
-name = "ovhsg" # todo
+name = "fslsg" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "ovhsg.reinzvpn.filegear-sg.me"
+pattern = "fslsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "teams.microsoft.com.ovhsg.reinzvpn.filegear-sg.me"
+pattern = "teams.microsoft.com.fslsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "meetings.googleapis.com.ovhsg.reinzvpn.filegear-sg.me"
+pattern = "meetings.googleapis.com.fslsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "edu.ruangguru.com.ovhsg.reinzvpn.filegear-sg.me"
+pattern = "edu.ruangguru.com.fslsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "beta.zoom.us.ovhsg.reinzvpn.filegear-sg.me"
+pattern = "beta.zoom.us.fslsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "api.zoom.us.ovhsg.reinzvpn.filegear-sg.me"
+pattern = "api.zoom.us.fslsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "store.zoom.us.ovhsg.reinzvpn.filegear-sg.me"
+pattern = "store.zoom.us.fslsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support.zoom.us.ovhsg.reinzvpn.filegear-sg.me"
+pattern = "support.zoom.us.fslsg.kenshivpn.filegear-sg.me"
 custom_domain = true
 
 
@@ -37,4 +37,4 @@ custom_domain = true
 # NODE_ID = "1"
 # API_TOKEN = "example_dev_token"
 # API_HOST = "api.v2board.com"
-UUID = "fc093293-adcc-4160-9b0f-690add6e41d5"
+UUID = "f0f83b69-ec7f-4814-af8f-af38f8721c91"
