--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "id-eduisat-gcp" # todo
+name = "SG-Vidio-Alibaba" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "edu.crotjanda.filegear-sg.me"
+pattern = "alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "carrier.webex.com.edu.crotjanda.filegear-sg.me"
+pattern = "img.email1.vidio.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "englishtest-stage-7.duolingo.com.edu.crotjanda.filegear-sg.me"
+pattern = "quiz.int.vidio.com.cdn.cloudflare.net.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.yourdomain.com.edu.crotjanda.filegear-sg.me"
+pattern = "quiz.vidio.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "blog.webex.com.edu.crotjanda.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.alibaba.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
