--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,19 @@ name = "SG-Vidio-Alibaba" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "alibaba.crotjanda.filegear-sg.me"
+pattern = "alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "img.email1.vidio.com.alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.cdn.cloudflare.net.alibaba.crotjanda.filegear-sg.me"
+pattern = "quiz.int.vidio.com.cdn.cloudflare.net.alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "quiz.vidio.com.alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
