--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-vidio" # todo
+name = "id-vidio" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "alivid.crotjanda.filegear-sg.me"
+pattern = "idvidio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.alivid.crotjanda.filegear-sg.me"
+pattern = "img.email1.vidio.com.idvidio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.int.vidio.com.cdn.cloudflare.net.alivid.crotjanda.filegear-sg.me"
+pattern = "quiz.int.vidio.com.cdn.cloudflare.net.idvidio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.alivid.crotjanda.filegear-sg.me"
+pattern = "quiz.vidio.com.idvidio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.alivid.crotjanda.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.idvidio.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
