--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-vidio-aws" # todo
+name = "sg-vidio-alibaba" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "awsvidio.crotjanda.filegear-sg.me"
+pattern = "alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.awsvidio.crotjanda.filegear-sg.me"
+pattern = "img.email1.vidio.com.alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email3.vidio.com.awsvidio.crotjanda.filegear-sg.me"
+pattern = "img.email3.vidio.com.alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.awsvidio.crotjanda.filegear-sg.me"
+pattern = "quiz.vidio.com.alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.awsvidio.crotjanda.filegear-sg.me"
+pattern = "quiz.staging.vidio.com.alividio.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
