--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "id-vidio-gcp" # todo
+name = "sg-xcl-vultr" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "idvidio.crotjanda.filegear-sg.me"
+pattern = "vultr.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email1.vidio.com.idvidio.crotjanda.filegear-sg.me"
+pattern = "df.game.naver.com.vultr.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "img.email3.vidio.com.idvidio.crotjanda.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.vultr.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.vidio.com.idvidio.crotjanda.filegear-sg.me"
+pattern = "bill.neowiz.com.vultr.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "quiz.staging.vidio.com.idvidio.crotjanda.filegear-sg.me"
+pattern = "ava.game.naver.com.vultr.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
