--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "jp-xcl-vultr" # todo
+name = "sg-addonxcl-amz" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "jpv.crotjanda.filegear-sg.me"
+pattern = "amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.jpv.crotjanda.filegear-sg.me"
+pattern = "ava.game.naver.com.amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.jpv.crotjanda.filegear-sg.me"
+pattern = "graph.facebook.com.amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "bill.neowiz.com.jpv.crotjanda.filegear-sg.me"
+pattern = "vplay.iflix.com.amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.jpv.crotjanda.filegear-sg.me"
+pattern = "static.cdninstagram.com.amazon.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
