--- a/wrangler.toml
+++ b/wrangler.toml
@@ -5,19 +5,19 @@ name = "id-addxcl-gcp" # todo
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "alibaba.crotjanda.filegear-sg.me"
+pattern = "add.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "ava.game.naver.com.add.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "zendesk1.grabtaxi.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "zendesk1.grabtaxi.com.add.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "support-whatsapp.zendesk.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "support-whatsapp.zendesk.com.add.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "graph.instagram.com.alibaba.crotjanda.filegear-sg.me"
+pattern = "graph.instagram.com.add.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
