--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,23 +1,23 @@
-name = "sg-xcl-oracle" # todo
+name = "sg-xcl-tencent" # todo
 #name = "cf-worker-connect-test" # todo
 #main = "test/worker/cf-cdn-cgi-trace2.js"
 #main = "test/worker/worker-connect-test.js"
 main = "_worker.js"
 compatibility_date = "2023-05-26"
 [[routes]]
-pattern = "oxcl.crotjanda.filegear-sg.me"
+pattern = "txcl.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "df.game.naver.com.oxcl.crotjanda.filegear-sg.me"
+pattern = "df.game.naver.com.txcl.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "care.pmang.game.naver.com.oxcl.crotjanda.filegear-sg.me"
+pattern = "care.pmang.game.naver.com.txcl.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "bill.neowiz.com.oxcl.crotjanda.filegear-sg.me"
+pattern = "bill.neowiz.com.txcl.crotjanda.filegear-sg.me"
 custom_domain = true
 [[routes]]
-pattern = "ava.game.naver.com.oxcl.crotjanda.filegear-sg.me"
+pattern = "ava.game.naver.com.txcl.crotjanda.filegear-sg.me"
 custom_domain = true
 
 [vars]
